tests/fixtures/invalid/none_le_float.py
# Cannot compare with <= None and Float
x: bool = None <= 1.0
